--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type ="module" src="./index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300;700&display=swap" rel="stylesheet">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
 
@@ -19,5 +19,21 @@
       <div class="submenu" id="clients"><span class="title">Clients</span></div>
       <div class="submenu" id="orders"><span class="title">Commandes</span></div>
     </div>
+
+    <div id="searchBox">
+      <p id="searchTitle" class="titleSection">
+        <img src="Icons/search.svg" alt="search icon" class="icon">
+        Rechercher un client
+      </p>
+      <input id="searchBar" placeholder="Rechercher" type="text">
+    </div>
+    
+    <div id="listBox">
+      <p id="listTitle" class="titleSection">
+        <img src="Icons/list.svg" alt="search icon" class="icon">
+        Liste des clients
+      </p>
+    </div>
+
   </body>
 </html>
