add list interactions

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
     </div>
     
     <div id="listBox">
-      <p id="listTitle" class="titleSection">
-        <img src="Icons/list.svg" alt="search icon" class="icon">
-        Liste des clients
-      </p>
+        <p id="listTitle" class="titleSection">
+          <img src="Icons/list.svg" alt="list icon" class="icon">
+          Liste des clients
+        </p>
+        <p id="addTitle" class="titleSection">
+          <img src="Icons/add.svg" alt="add icon" class="icon">
+          Ajouter un client
+        </p>
     </div>
-
   </body>
 </html>
