--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
           <div id="telBox">
             <div class="blockInfo">
               <p class="subtitle" id="telNum1">Tél.</p>
-              <input id="phone" type="tel">
+              <!-- <input id="phone" type="tel">
               <script src="./Phone/build/js/intlTelInput.js"></script>
               <script>
                 var input = document.querySelector("#phone");
                 window.intlTelInput(input, {
                   // any initialisation options go here
                 });
-              </script>
+              </script> -->
               <select id="dropdownTel" class="itemForm">
                 <option value="+33">+33</option>
                 <option value="autre">autre</option>
